--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_DEBUG=true
 APP_KEY=iJ6NBAGqvxHIdvMRbJpFj9ABJCFYf3pY
 
 DB_HOST=localhost
-DB_DATABASE=deploy
+DB_DATABASE=deco3801
 DB_USERNAME=root
 DB_PASSWORD=cirras91
 
