add domPDF wrapper for laravel

--- a/.env
+++ b/.env
@@ -3,9 +3,9 @@ APP_DEBUG=true
 APP_KEY=iJ6NBAGqvxHIdvMRbJpFj9ABJCFYf3pY
 
 DB_HOST=localhost
-DB_DATABASE=deploy
+DB_DATABASE=3801
 DB_USERNAME=root
-DB_PASSWORD=cirras91
+DB_PASSWORD=1234567
 
 
 CACHE_DRIVER=file
