--- a/.env
+++ b/.env
@@ -3,9 +3,9 @@ APP_DEBUG=true
 APP_KEY=iJ6NBAGqvxHIdvMRbJpFj9ABJCFYf3pY
 
 DB_HOST=localhost
-DB_DATABASE=3801
+DB_DATABASE=deploy
 DB_USERNAME=root
-DB_PASSWORD=1234567
+DB_PASSWORD=cirras91
 
 
 CACHE_DRIVER=file
