--- a/.env
+++ b/.env
@@ -3,9 +3,9 @@ APP_DEBUG=true
 APP_KEY=iJ6NBAGqvxHIdvMRbJpFj9ABJCFYf3pY
 
 DB_HOST=localhost
-DB_DATABASE=forge
-DB_USERNAME=forge
-DB_PASSWORD=AV1FWIZk8htmvu2GV8D6
+DB_DATABASE=deco3801	
+DB_USERNAME=root
+DB_PASSWORD=cirras91
 
 
 CACHE_DRIVER=file
